# HaskellLove21

./: .gitignore  README.md  hs.template  talk.md  template.cabal  test.py
.github/workflows/: kattis.yml
autori/: Autori.cabal  Autori.hs  Main.hs
autori/dist-newstyle/cache/: config
lastfactorialdigit/: LastFactorialDigit.cabal  LastFactorialDigit.hs
stopwatch/: 2.out  Stopwatch.cabal  Stopwatch.hs
textencryption/: TextEncryption.cabal  TextEncryption.hs
